# base

./: .gitignore  Cargo.toml  DYSNIX-FORK.md  Justfile  PORTING_REFERENCE.md  deny.toml  lychee.toml  tdx-gcp-test-plan.md  tdx-plan.md
.config/: nextest.toml
.github/actions/setup/: action.yml
.github/workflows/: action-tests.yml  benchmark.yml  build-base-image.yml  build-release.yml  ci-core.yml  ci-main-cache.yml  ci-merge-queue.yml  ci-pr.yml  docker.yml  dysnix-images.yml  dysnix-sync-upstream.yml  lychee.yml  no-std.yml  udeps-report.yml  zepter.yml
.zed/: debug.json
actions/: README.md
actions/harness/: Cargo.toml
actions/harness/src/: engine.rs  matrix.rs  miner.rs  node.rs  test_rollup_config.rs
actions/harness/tests/: batcher_gap_filling.rs  hardfork_activation.rs
apps/vibenet-ui/public/: app.js  faucet.html  faucet.js  index.html  style.css
crates/batcher/core/: README.md
crates/batcher/encoder/: Cargo.toml
crates/batcher/service/: Cargo.toml
crates/builder/core/: Cargo.toml
crates/client/metering/: Cargo.toml
crates/client/proofs/: Cargo.toml
crates/common/network/: Cargo.toml  README.md
crates/common/network/src/: engine.rs  lib.rs
crates/common/precompiles/: Cargo.toml
crates/common/precompiles-contracts/: Cargo.toml  README.md
crates/common/precompiles-contracts/src/: lib.rs
crates/common/precompiles-contracts/src/precompiles/: b20.rs  b20_factory.rs  b403_registry.rs  base_dex.rs  mod.rs
crates/common/precompiles-macros/: Cargo.toml
crates/common/precompiles-macros/src/: lib.rs  packing.rs  storable.rs  storable_primitives.rs  utils.rs
crates/common/precompiles/src/: address.rs  bootstrap.rs  error.rs  lib.rs
crates/common/precompiles/src/b20/: dispatch.rs  mod.rs  rewards.rs  roles.rs
crates/common/precompiles/src/b20_factory/: dispatch.rs  mod.rs
crates/common/precompiles/src/b403_registry/: dispatch.rs  mod.rs
crates/common/precompiles/src/base_dex/: dispatch.rs  mod.rs
crates/common/precompiles/src/storage/: evm.rs  hashmap.rs  mod.rs  packing.rs  thread_local.rs
crates/common/precompiles/src/storage/types/: array.rs  bytes_like.rs  mapping.rs  mod.rs  primitives.rs  set.rs  slot.rs  vec.rs
crates/common/precompiles/tests/: storage.rs
crates/common/precompiles/tests/storage_tests/: arrays.rs  layouts.rs  mappings.rs  mod.rs  packing.rs  roundtrip.rs  sets.rs  strings.rs  structs.rs
crates/common/precompiles/tests/storage_tests/solidity/: mod.rs  precompiles.rs  primitives.rs  utils.rs
crates/common/precompiles/tests/storage_tests/solidity/testdata/: b20.layout.json  b20.sol  b20_factory.layout.json  b20_factory.sol  b403_registry.layout.json  b403_registry.sol
crates/infra/benchmark/: Cargo.toml  PLAN.md  README.md
crates/infra/benchmark/examples/: devnet.yaml  flashblocks-300mgas.yaml
crates/infra/benchmark/src/: error.rs  lib.rs  output.rs  params.rs  process.rs  service.rs
crates/infra/benchmark/src/client/: mod.rs
crates/infra/benchmark/src/config/: mod.rs
crates/infra/benchmark/src/consensus/: mod.rs
crates/infra/benchmark/src/flashblocks/: mod.rs
crates/infra/benchmark/src/metrics/: mod.rs
crates/infra/benchmark/src/payload/: mod.rs
crates/infra/benchmark/src/runner/: mod.rs
crates/infra/roxy/crates/cache/: Cargo.toml  README.md
crates/infra/roxy/crates/cache/src/: fallback.rs  lib.rs  rmap.rs
crates/infra/roxy/crates/config/: Cargo.toml  README.md
crates/infra/roxy/crates/config/src/: lib.rs
crates/infra/roxy/crates/rpc/: Cargo.toml  README.md
crates/infra/roxy/crates/rpc/src/: lib.rs
crates/infra/roxy/crates/runtime/: Cargo.toml  README.md
crates/infra/roxy/crates/runtime/src/: lib.rs
crates/infra/roxy/crates/server/: Cargo.toml  README.md
crates/infra/roxy/crates/server/src/: lib.rs  state.rs
crates/infra/roxy/crates/traits/: Cargo.toml  README.md
crates/infra/roxy/crates/traits/src/: backend.rs  cache.rs  lib.rs  load_balancer.rs
crates/infra/roxy/crates/types/: Cargo.toml  README.md
crates/infra/roxy/crates/types/src/: lib.rs
crates/infra/roxy/examples/full-demo/: Cargo.toml
crates/infra/roxy/examples/full-demo/src/: client.rs  config.rs  main.rs  output.rs
crates/infra/roxy/examples/full-demo/src/mock_node/: handlers.rs  mod.rs  server.rs  state.rs
crates/infra/roxy/fuzz/: Cargo.toml
crates/infra/roxy/fuzz/fuzz_targets/: fuzz_codec_batch.rs  fuzz_codec_decode.rs
crates/infra/roxy/tests/: Cargo.toml  cache_integration.rs  codec_integration.rs  config_integration.rs  lib.rs
crates/proof/contracts/: Cargo.toml
crates/proof/contracts/src/: aggregate_verifier.rs  anchor_state_registry.rs  lib.rs  tdx_verifier.rs  tee_prover_registry.rs
crates/proof/tee/attestation/: Cargo.toml  README.md
crates/proof/tee/attestation/src/: lib.rs  types.rs
crates/proof/tee/registrar/: Cargo.toml  README.md
crates/proof/tee/registrar/src/: config.rs  driver.rs  error.rs  lib.rs  metrics.rs  tdx.rs  types.rs
crates/proof/tee/tdx-attestation-prover/: Cargo.toml  README.md
crates/proof/tee/tdx-attestation-prover/guest/: Cargo.toml  README.md
crates/proof/tee/tdx-attestation-prover/guest/.cargo/: config.toml
crates/proof/tee/tdx-attestation-prover/guest/src/: atomic_shims.rs  main.rs
crates/proof/tee/tdx-attestation-prover/src/: boundless.rs  direct.rs  error.rs  input.rs  lib.rs  recovery.rs  risc_zero.rs  test_utils.rs
crates/proof/tee/tdx-image-hash/: Cargo.toml  README.md
crates/proof/tee/tdx-image-hash/src/: cli.rs  lib.rs  main.rs  report.rs  tool.rs
devnet/: Cargo.toml
devnet/src/: rpc.rs  smoke.rs  urls.rs
devnet/tests/: bundles.rs  fcu_latency.rs  local_safe_head.rs  tx_forwarding.rs
docs/autonomy/: perf-journal.md
docs/guides/: P2P.md  UPGRADES.md
etc/contracts/: TDXEndToEndRegistration.t.sol
etc/docker/: Dockerfile.rust-services  Justfile  devnet-env  docker-bake.hcl  docker-compose.ha.yml  docker-compose.yml
etc/just/: build.just  check.just  load-test.just  succinct.just
etc/vibenet/: README.md  docker-compose.origin.yml  docker-compose.public.yml  docker-compose.vibenet.yml  vibenet-env.example
(+516 files in other folders)
