[package]
name = "base-common-network"
description = "Base blockchain RPC behavior abstraction"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
base-common-rpc-types.workspace = true
base-common-rpc-types-engine = { workspace = true, features = ["serde"] }
base-common-consensus = { workspace = true, features = ["alloy-compat", "std"] }

# Alloy
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["serde", "std"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }

# Reth (optional, behind "reth" feature)
reth-rpc-convert = { workspace = true, optional = true }

# misc
async-trait.workspace = true

[dev-dependencies]
rstest.workspace = true

[features]
std = [
	"alloy-consensus/std",
	"alloy-primitives/std",
	"alloy-rpc-types-engine/std",
	"alloy-rpc-types-eth/std",
	"base-common-consensus/std",
	"base-common-rpc-types-engine/std",
	"base-common-rpc-types/std",
]
serde = [
	"alloy-consensus/serde",
	"alloy-primitives/serde",
	"alloy-rpc-types-engine/serde",
	"alloy-rpc-types-eth/serde",
	"base-common-consensus/serde",
	"base-common-rpc-types-engine/serde",
	"base-common-rpc-types/serde",
]
reth = [ "dep:reth-rpc-convert", "std" ]
