[package]
name = "base-precompiles-macros"
description = "Procedural macros for type-safe EVM storage abstractions, and better devex for interacting with EVM contracts"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true }
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true

[dev-dependencies]
alloy = { workspace = true }
