[package]
name = "base-proof-contracts"
description = "Shared onchain contract bindings for Base dispute game management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, optional = true }
alloy-contract = { workspace = true, optional = true }

# Async
futures = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# Tracing
tracing = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true, optional = true }

# Misc
url = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true

[features]
default = [ "clients" ]
clients = [
	"dep:alloy-contract",
	"dep:alloy-provider",
	"dep:async-trait",
	"dep:futures",
	"dep:thiserror",
	"dep:tracing",
	"dep:url",
]
