[package]
name = "base-proof-tee-attestation"
description = "Shared TEE attestation proof model for signer registration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Contracts
base-proof-contracts.workspace = true

# Types / traits
async-trait.workspace = true
alloy-primitives.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
