[package]
name = "base-proof-tee-tdx-image-hash"
description = "TDX prover image hash inspection tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "base-proof-tee-tdx-image-hash"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Base
base-proof-contracts.workspace = true
base-proof-tee-registrar.workspace = true
base-proof-tee-tdx-prover.workspace = true
base-proof-tee-tdx-verifier.workspace = true
base-proof-primitives = { workspace = true, features = ["rpc-client"] }

# Alloy
alloy-provider.workspace = true
alloy-primitives.workspace = true

# CLI / runtime
url.workspace = true
hex.workspace = true
eyre.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
jsonrpsee = { workspace = true, features = ["http-client"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
base-proof-tee-tdx-runtime.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
base-proof-primitives = { workspace = true, features = ["rpc-client", "rpc-server"] }
