[package]
name = "roxy-cache"
description = "Cache implementations for Roxy RPC proxy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
roxy-traits.workspace = true

# alloy
alloy-primitives.workspace = true

# caching
lru.workspace = true
redis.workspace = true

# compression
brotli.workspace = true

# async
tokio.workspace = true

# misc
bytes.workspace = true
tracing.workspace = true
serde_json.workspace = true
derive_more.workspace = true

[dev-dependencies]
rstest.workspace = true
